wasm-filters/burst_header/echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  ports:
  - port: 8000
    name: http
    nodePort: 30000
  type: NodePort # For external access (k3d, kind)
  selector:
    app: echo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: solsson/http-echo
        resources:
          limits:
            cpu: "500m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000 
        securityContext:
          runAsUser: 1000
